--- a/templates/lista.html
+++ b/templates/lista.html
@@ -34,6 +34,7 @@
       <table class="table table-striped table-hover">
         <thead class="thead-default">
           <tr>
+            <th>Ações</th>
             <th>Livro</th>
             <th>Autor</th>
             <th>Categoria</th>
@@ -45,6 +46,10 @@
         <tbody>
           {% for livro in lista_de_livros %}
           <tr>
+            <td>
+              <a href="{{ url_for('editar', id=livro.id) }}" class="btn btn-warning btn-sm">Editar</a>
+              <a href="{{ url_for('deletar', id=livro.id) }}" class="btn btn-danger btn-sm">Deletar</a>
+            </td>
             <td>{{ livro.titulo }}</td>
             <td>{{ livro.autor }}</td>
             <td>{{ livro.categoria }}</td>
